[gd_scene load_steps=10 format=2]

[ext_resource path="res://script/SoundManager.gd" type="Script" id=1]
[ext_resource path="res://sfx/main_menu_button.wav" type="AudioStream" id=2]
[ext_resource path="res://sfx/tile_place_fail.wav" type="AudioStream" id=3]
[ext_resource path="res://sfx/tile_let_go.wav" type="AudioStream" id=4]
[ext_resource path="res://sfx/tile_place_success.wav" type="AudioStream" id=5]
[ext_resource path="res://sfx/tile_ pickup_minus1.wav" type="AudioStream" id=6]
[ext_resource path="res://sfx/tile_ pickup.wav" type="AudioStream" id=7]
[ext_resource path="res://sfx/tile_ pickup_plus2.wav" type="AudioStream" id=8]
[ext_resource path="res://sfx/tile_ pickup_plus1.wav" type="AudioStream" id=9]

[node name="SoundManager" type="Node"]
script = ExtResource( 1 )

[node name="Menu" type="Node" parent="."]

[node name="MainMenuClick" type="AudioStreamPlayer" parent="Menu"]
stream = ExtResource( 2 )

[node name="TileSounds" type="Node" parent="."]

[node name="TileLetGo" type="AudioStreamPlayer" parent="TileSounds"]
stream = ExtResource( 4 )

[node name="TilePlaceFail" type="AudioStreamPlayer" parent="TileSounds"]
stream = ExtResource( 3 )

[node name="TilePlaceSuccess" type="AudioStreamPlayer" parent="TileSounds"]
stream = ExtResource( 5 )

[node name="TilePickupOct4" type="AudioStreamPlayer" parent="TileSounds"]
stream = ExtResource( 7 )

[node name="TilePickupOct3" type="AudioStreamPlayer" parent="TileSounds"]
stream = ExtResource( 6 )

[node name="TilePickupOct5" type="AudioStreamPlayer" parent="TileSounds"]
stream = ExtResource( 9 )

[node name="TilePickupOct6" type="AudioStreamPlayer" parent="TileSounds"]
stream = ExtResource( 8 )
